fix push-to-server script

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,6 +33,11 @@
 				"bundle",
 				"run"
 			]
+		},
+		{
+			"label": "push to server",
+			"type": "shell",
+			"command": "./push-to-server.ps1"
 		}
 	]
 }
